--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+    font-family: 'Roboto';
+}
+
 /* BODY */
 
 body {
@@ -5,10 +9,21 @@ body {
     background-color: rgb(216, 222, 226);
 }
 
+/*ENCABEZADO*/
+
+.encabezado>img {
+    width: 100%;
+}
+
+/* MAIN */
+
+#main {
+    margin: 5em;
+}
+
 /* NAV MENU */
 
 #menu {
-    font-family: 'Roboto';
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -23,7 +38,7 @@ body {
 }
 
 #menu>ul>li {
-    background-color: rgb(183, 200, 214);
+    background-color: aquamarine;
     list-style:none;
     padding: 1em;
     text-align: center;
@@ -51,32 +66,29 @@ body {
 
 #logo>h1 {
     padding: 0 0 0 0.5em;
-    font-family: 'Roboto';
     font-weight: 700;
 }
 
 #logo:hover {
     transition: 0.5s;
-    transform: scale(2);
+    transform: scale(1.2);
 }
 
 
 /* FOOTER */
 
 footer {
-    position: fixed;
     bottom: 0;
     display: flex;
     justify-content: center;
     align-items: center;
     width:100%;
-    background-color: rgb(183, 200, 214);
+    background-color: rgb(255, 255, 255);
 }
 
 footer p {
+    font-size: small;
     max-width: 50em;
-    border-color: black;
-    border-style: double;
     margin: 1em;
     padding: 1em;
     color:rgb(0, 0, 0);
