--- a/styles.css
+++ b/styles.css
@@ -80,16 +80,21 @@ body {
 footer {
     bottom: 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     width:100%;
     background-color: rgb(255, 255, 255);
+    text-align: center;
 }
 
-footer p {
+footer>p {
+    max-width: 20em;
     font-size: small;
-    max-width: 50em;
     margin: 1em;
     padding: 1em;
     color:rgb(0, 0, 0);
+}
+
+footer>div>i {
+    padding: 0 0 0 0.5em;
 }
