--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,14 @@ body {
     background-color: rgb(255, 255, 255);
 }
 
+#menu a {
+    color:black;
+}
+
+#menu a:hover {
+    color: aquamarine;
+}
+
 #menu>ul {
     margin: 2em 2em 0em 2em;
     display: flex;
@@ -58,7 +66,6 @@ body {
 
 #menu>ul>li:hover {
     transition: 0.5s;
-    color:white;
     background-color: black;
 }
 
