--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@ a {
 footer {
     bottom: 0;
     width:100%;
-    background-color: rgb(255, 255, 255);
+    background-color:aquamarine;
     text-align: center;
     font-size: small;
     color:rgb(0, 0, 0);
