--- a/styles.css
+++ b/styles.css
@@ -152,24 +152,28 @@ a {
 }
 
 .contenedor-transparente {
-    display: flex;
-    flex-flow: row wrap;
-    margin: 1em 0 1em 0;
+    padding: 1em;
 }
 
 .promo-contenedor {
-    background-image: url("imagenes/otter-pattern.png");
-    background-color:white;
+    background-color:black;
     background-size:5em;
     background-position: center;
     padding: 1em;
     margin:auto;
     font-size: large;
+    text-align: center;
 }
 
-.promo-contenedor:hover {
-    transition: 0.5s;
-    background-size:7em;
+
+.promo-contenedor>p{
+    color:white;
+    font-size: xx-large;
+}
+
+.promo-contenedor>h3{
+    color:white;
+    font-size: x-large;
 }
 
 
@@ -207,6 +211,7 @@ a {
     color: white;
     background-color: #ff8800;
     width: 100%;
+    height: 3em;
 }
 
 .boton-naranja:hover {
