--- a/styles.css
+++ b/styles.css
@@ -69,10 +69,9 @@ a {
 }
 
 .contenedor-imgfondo {
-    background-image: url(imagenes/nueva-zelanda-playa.jpg);
+    background-image: url(imagenes/caribe.jpg);
     background-size:cover;
     background-repeat: no-repeat;
-    background-position: center;
 }
 
 /* MAIN */
@@ -243,8 +242,10 @@ textarea {
 /*--- ESTILOS DE TEXTO ---*/
 
 mark {
-    font-family: 'Krona One', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 700;
+    font-family: 'Arial Narrow', Arial, sans-serif;
     background-color: aquamarine;
+    
 }
 
 .titulo-seccion {
