--- a/styles.css
+++ b/styles.css
@@ -201,6 +201,12 @@ a {
 }
 
 
+.contenedor-destinos>* {
+    min-height: 10em;
+    background-position: center;
+}
+
+
 /*--- estilos para formulario ---*/
 
 .contacto-fields {
