--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,8 @@ a {
 
 
 .contenedor-destinos>* {
-    min-height: 10em;
+    margin: 0;
+    min-height: 8em;
     background-position: center;
 }
 
